--- a/hw/waterfall.Ajax/css/style.css
+++ b/hw/waterfall.Ajax/css/style.css
@@ -26,8 +26,8 @@ hr { width:80%; height:2px; background: #fff }
 
 .button{
 	position:fixed;
-	width: 50px;
-	height:50px;
+	width: 5%;
+	height:5%;
 	font: 16px/30px 'opensans-bold', sans-serif;
 	background: #11ABB0;
     z-index: 0;
