--- a/hw/waterfall.Ajax/css/style.css
+++ b/hw/waterfall.Ajax/css/style.css
@@ -1,4 +1,4 @@
-body{
+﻿body{
 	background: #ebeeee;
   height:auto;
 }
@@ -26,7 +26,6 @@ hr { width:80%; height:2px; background: #fff }
 
 .button{
 	position:fixed;
-	width: 5%;
 	height:5%;
 	font: 16px/30px 'opensans-bold', sans-serif;
 	background: #11ABB0;
@@ -72,6 +71,11 @@ hr { width:80%; height:2px; background: #fff }
     padding: 3%;
     line-height: 0;
     display: block;
+}
+
+#img p{
+  text-align: right;
+  font:16px '微软雅黑';
 }
 
 #img .pic {
@@ -123,5 +127,26 @@ hr { width:80%; height:2px; background: #fff }
 }
 
 .comments p{
+  text-align: center;
+  font: 12px/1.1em '微软雅黑';
+}
 
+#pageup{
+  font: 12px/1.1em '微软雅黑';
+  width:30%;
+  height:50px;
+  bottom: 10px;
+  margin-left: 10%;
+  left:0px;
+  position:absolute;
+}
+
+#pagedown{
+  font:12px/1.1em '微软雅黑';
+  width:30%;
+  height:50px;
+  bottom: 10px;
+  margin-right: 10%;
+  right:0px;
+  position:absolute;
 }
