--- a/hw/waterfall.Ajax/css/style.css
+++ b/hw/waterfall.Ajax/css/style.css
@@ -70,7 +70,7 @@ hr { width:80%; height:2px; background: #fff }
     border-radius: 5px;
     line-height: 0;
     display: block;
-    margin-bottom: 3%;
+    margin-bottom: 5%;
 }
 
 .lightbox .lb-image
@@ -79,7 +79,7 @@ hr { width:80%; height:2px; background: #fff }
 }
 
 .popBg{
-  background:#000; 
+  background-color: #000;
   opacity:0.7; 
   filter:alpha(opacity=50);
   height:100%; 
@@ -94,6 +94,10 @@ hr { width:80%; height:2px; background: #fff }
 .popWrap{ 
   position:fixed;
   z-index:100;
+  padding: 5px;
+  background: #fff;
+  border-radius: 5px;
+  -webkit-filter: blur(0px);
 }
 
 .comments{
@@ -103,7 +107,7 @@ hr { width:80%; height:2px; background: #fff }
   position: fixed;
   z-index: 100;
   height: 50%;
-  margin-left:10px;
+  margin-left:20px;
   border-radius: 5px;
   top:25%;
 }
@@ -111,6 +115,11 @@ hr { width:80%; height:2px; background: #fff }
 .comments p{
   text-align: center;
   font: 12px/1.1em '微软雅黑';
+}
+
+.comments .comment .author{
+  text-align: left;
+  font: 18px/1.1em '黑体';
 }
 
 #pageup{
@@ -172,7 +181,12 @@ a img:hover {
 .img-process{ 
   z-index:100;
   position: fixed;
-  width:100px;
-  height:100px;
-  left:500px;
+}
+
+.close-button{
+  position: fixed;
+  z-index: 101;
+  width:30px;
+  height: 30px;
+  border-radius: 100%;
 }
