--- a/hw/waterfall.Ajax/css/style.css
+++ b/hw/waterfall.Ajax/css/style.css
@@ -1,5 +1,5 @@
 ﻿body{
-	background: #2f3238;
+	background: #A8B8BA;
   height:auto;
 }
 
@@ -28,7 +28,7 @@ hr { width:80%; height:2px; background: #fff }
 	position:fixed;
 	height:5%;
 	font: 16px/30px 'opensans-bold', sans-serif;
-	background: #11ABB0;
+	background: #31D264;
     z-index: 0;
 	
 	letter-spacing: 0;
@@ -101,44 +101,80 @@ hr { width:80%; height:2px; background: #fff }
 }
 
 .comments{
-  background: #ebeeee;
-  overflow: scroll;
-  overflow-x:visible;
+  background: #DF7070;
+  overflow: hidden;
   position: fixed;
   z-index: 100;
-  height: 50%;
+  height: 60%;
   margin-left:20px;
   border-radius: 5px;
-  top:25%;
+  top:20%;
 }
 
-.comments p{
-  text-align: center;
-  font: 12px/1.1em '微软雅黑';
+.comments .comment{
+    background:white; 
+    width:96%; 
+    height:15%;
+    margin:2%;
+    border-radius: 5px;
 }
 
-.comments .comment .author{
+.comment .author{
+  width:25%;
+  float: left;
+  text-align:center;
+  font: bold 18px/1.1em '黑体';
+  vertical-align: center;
+  position: relative;
+  top:40%;
+}
+
+.comment .content{
+  width:75%;
+  word-wrap: break-word;
   text-align: left;
-  font: 18px/1.1em '黑体';
+  float: left;
+  font: 16px/1.1em '微软雅黑';
+  top:20%;
+  position:relative;
+}
+
+.comment .date{
+  text-align: right;
+  font: italic 12px/1.1em '微软雅黑';
+  top:80%;
+  float: right;
+  position:relative;
+}
+
+.comment .device{
+  width:35%;
+  margin: 0px;
+  top:80%;
+  right:10px;
+  text-align: right;
+  font: 12px/1.1em '微软雅黑' gray;
+  float: right;
+  position:relative;
 }
 
 #pageup{
-  font: 12px/1.1em '微软雅黑';
+  font: bold 16px/1.1em '微软雅黑';
   width:30%;
-  height:50px;
-  bottom: 10px;
+  height:11%;
   margin-left: 10%;
   left:0px;
+  bottom: 0px;
   position:absolute;
 }
 
 #pagedown{
-  font:12px/1.1em '微软雅黑';
+  font: bold 16px/1.1em '微软雅黑';
   width:30%;
-  height:50px;
-  bottom: 10px;
+  height:11%;
   margin-right: 10%;
   right:0px;
+  bottom: 0;
   position:absolute;
 }
 
